--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
+.DS_Store
+
 config.private.php
 public_html/perch/addons/apps
 public_html/perch/addons/plugins/editors
 public_html/perch/addons/feathers
 public_html/perch/addons/lang
-public_html/perch/runtime.php
-public_html/perch/index.php
+public_html/perch/resources/perch_blog*
